# telecog_provider_interface

./: pyproject.toml
src/: manage.py
src/epsom_survey/: apps.py  models.py  urls.py  views.py
src/epsom_survey/static/epsom_survey/: epsom_result.css  epsom_survey.css
src/epsom_survey/templates/epsom_survey/: epsom_completion_screen.html  epsom_result.html  epsom_result_progress_bar.html  epsom_survey.html  form_top5.html  form_type1.html  form_type2.html  form_type3.html
src/patient_portal/: urls.py  views.py
src/patient_portal/templates/: patient_portal.html
src/provider_portal/: apps.py  forms.py  models.py  urls.py  views.py
src/provider_portal/static/provider_portal/: provider_portal.css
src/provider_portal/templates/provider_portal/: assessment_form.html  patient_detail.html  patient_form.html  patient_list.html  popup_modal.html
src/provider_portal/templates/provider_portal/patient_detail_tabs/: assessment_history.html  assessment_reports.html  assessment_scheduled.html
src/static/: main.css
src/telecog_provider_interface/: asgi.py  settings.py  urls.py  wsgi.py
src/templates/: base.html  message.html
src/utils/: email.py  twilio.py
